--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,17 @@
 ENV=dev
 USE_HTTP=true
-DATABASE_DSN=postgres://postgres:963852741@localhost:5432/polygames
+APP_NAME=polygames
+APP_DIR="/opt/polygames"
+APP_PORT=8080
+
+DB_CONNECTION=postresql
+DB_DATABASE=polygames
+DB_USERNAME=postgres
+DB_PASSWORD=12345678
+DB_PORT=5432
+
+PGWEB_PORT=8081
+PGADMIN_PORT=8082
+PGADMIN_DEFAULT_EMAIL=admin@admin.com
+PGADMIN_DEFAULT_PASSWORD=12345678
+DOCKER_RESTART_POLICY=no
