fix development environment

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -6,8 +6,7 @@ services:
       - 5432:5432
     volumes:
       - ./db/.pg_data:/var/lib/postgresql/data
-      - ./db/init-db.sh:/init-db.sh
-      - ./db/fake.sql:/fake.sql
+      - ./db/fake.sql:/docker-entrypoint-initdb.d/fake.sql
 
     environment:
       POSTGRES_DB: ${DB_DATABASE}
@@ -23,19 +22,19 @@ services:
       timeout: 0s
       retries: 2
 
-
   server:
-    container_name: polygames-server
     build:
+      context: .
       dockerfile: Dockerfile
       args:
         - APP_DIR=$APP_DIR
         - APP_NAME=$APP_NAME
     restart: "${DOCKER_RESTART_POLICY:-unless-stopped}"
+    container_name: polygames-server
     env_file:
       - .env
     ports:
-      - 8087:8080
+      - 8080:8080
     environment:
       - ENV=${APP_ENV:-prod}
     networks:
@@ -45,7 +44,7 @@ services:
     depends_on:
       postgresql:
         condition: service_healthy
-       
+
   migrations:
     image: migrate/migrate
     container_name: polygames-migrations
@@ -55,9 +54,6 @@ services:
     command: -database postgres://${DB_USERNAME}:${DB_PASSWORD}@postgresql:${DB_PORT}/${DB_DATABASE}?sslmode=disable -path /migrations up
     volumes:
       - ./migrations:/migrations
-    networks:
-      - net
-      
+
 networks:
   net:
-
