--- a/backend/Makefile
+++ b/backend/Makefile
@@ -7,3 +7,7 @@ migrate:
 .PHONY:build-w
 build:
 	go build -o build/polygames.exe cmd/main.go
+
+.PHONY:docs
+docs:
+	swag init -o cmd/docs --parseDependency --parseInternal --parseDepth 1 -q -g cmd/main.go
